# fastapi-project-template

./: .flake8  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-10-18_init.py  2023-10-20_init.py
src/: api.py  constants.py  database.py  main.py  models.py  utils.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  security.py  service.py  utils.py
src/database/: core.py  table.py
tests/auth/: test_router.py
